# simple-mcp-server

./: .gitignore  README.md  examples.py  pyproject.toml  requirements.txt  server.py  server_http.py  utils.py
